Added signal chain impulse response to digitiser path.

--- a/Makefile.arch
+++ b/Makefile.arch
@@ -571,14 +571,25 @@ GCC_MINOR := $(shell $(CXX) -dumpversion 2>&1 | cut -d'.' -f2)
 endif
 
 ifdef ANITA_UTIL_INSTALL_DIR
-	ANITA_UTIL_LIB_DIR=${ANITA_UTIL_INSTALL_DIR}/lib
-	ANITA_UTIL_INC_DIR=${ANITA_UTIL_INSTALL_DIR}/include
-	CXXFLAGS += -DANITA_UTIL_EXISTS
-	LD_ANITA_UTIL=-L${ANITA_UTIL_LIB_DIR} -lAnitaEvent
-	INC_ANITA_UTIL=-I${ANITA_UTIL_INC_DIR}
-	ANITA_DATA_HEADERS = ${ANITA_UTIL_INC_DIR}/RawAnitaEvent.h ${ANITA_UTIL_INC_DIR}/UsefulAnitaEvent.h ${ANITA_UTIL_INC_DIR}/RawAnitaHeader.h ${ANITA_UTIL_INC_DIR}/AnitaConventions.h ${ANITA_UTIL_INC_DIR}/AnitaGeomTool.h ${ANITA_UTIL_INC_DIR}/AnitaPacketUtil.h ${ANITA_UTIL_INC_DIR}/simpleStructs.h
+ANITA_UTIL_LIB_DIR=${ANITA_UTIL_INSTALL_DIR}/lib
+ANITA_UTIL_INC_DIR=${ANITA_UTIL_INSTALL_DIR}/include
+CXXFLAGS += -DANITA_UTIL_EXISTS
+LD_ANITA_UTIL=-L${ANITA_UTIL_LIB_DIR} -lAnitaEvent
+INC_ANITA_UTIL=-I${ANITA_UTIL_INC_DIR}
+ANITA_DATA_HEADERS = ${ANITA_UTIL_INC_DIR}/RawAnitaEvent.h ${ANITA_UTIL_INC_DIR}/UsefulAnitaEvent.h ${ANITA_UTIL_INC_DIR}/RawAnitaHeader.h ${ANITA_UTIL_INC_DIR}/AnitaConventions.h ${ANITA_UTIL_INC_DIR}/AnitaGeomTool.h ${ANITA_UTIL_INC_DIR}/AnitaPacketUtil.h ${ANITA_UTIL_INC_DIR}/simpleStructs.h
+
+#Toggles the FFT functions on and off
+USE_FFT_TOOLS=1
+
+ifdef USE_FFT_TOOLS
+FFTLIBS = -lRootFftwWrapper -lfftw3
+FFTFLAG = -DUSE_FFT_TOOLS
+else
+FFTLIBS =
+FFTFLAG =
 endif
 
+endif
 
 
 
