--- a/inputs.anita3.yaml
+++ b/inputs.anita3.yaml
@@ -28,19 +28,23 @@
 
 
 
+
+
 ################################################################################################
 # Event input output
 ################################################################################################
-Number of neutrinos: 2000000 # How many neutrinos to generate
+Number of neutrinos: 20000 # How many neutrinos to generate
 Energy exponent: 20 # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nucleii (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
 Neutrino position: 0 # (0) Pick neutrino position in the ice within the horizon of the balloon and neutrino direction such that the specular ray hitting the balloon sits on the Cerenkov cone or (1) Pick neutrino interaction point from anywhere in the ice and neutrino direction from all directions equally
 Write hists and trees: 1 # 1=write to histograms and trees, 0=don't write to histograms & trees
 Write ray: 0      # 1=write to ray tree (for roughness study), 0 don't write
 Only final tree: 0     # 1=only write to final tree (for events that pass)
-Max histogram entries: 10000  # Maximum number of entries to store in histograms (10000=default).
+Max histogram entries: 2000000  # Maximum number of entries to store in histograms (10000=default).
 Random seed: 65546  # Random number seed
 Write neutrino position: 0      # Write neutrino position info to file
 Events map: 0 # (1) EVENTSMAP draw the events distribution map or (0) not
+
+
 
 ################################################################################################
 # Balloon and payload
@@ -55,6 +59,8 @@ Fixed balloon longitude: 999 # (degrees east) (999 is default position) longitud
 Balloon orientation : 0  # Fixed (0) or randomized (1) balloon orientation.  0=default
 Balloon altitude: 120000. # Pick balloon altitude in ft. (0) 120000 ft. or whatever you choose.
 Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
+
+
 
 ################################################################################################
 # Trigger
@@ -83,6 +89,8 @@ ANITA-1 channel masking: 0 # implement channel masking as in anita 1 flight (1) 
 ANITA-2 channel masking: 1 # implement phi masking as in anita 2 flight or in anita 3 flight (1) yes or (0) no
 
 
+
+
 ################################################################################################
 ### Modifications to the trigger that have been used for modeling anita-lite
 ################################################################################################
@@ -96,6 +104,7 @@ E pol 2nd ant dead: 0 # E polarization of 2nd antenna is dead
 H pol 2nd ant dead: 0 # H polarization of 2nd antenna is dead
 RCP 2nd ant dead: 0 # RCP of 2nd antenna is dead
 LCP 2nd ant dead: 0 # LCP of 2nd antenna is dead
+
 
 
 ################################################################################################
@@ -130,6 +139,7 @@ Surface roughness: 0.025      # level of surface roughness: for ROUGHNESS==2, th
 FIRN: 1	# FIRN (1) yes or (0) no
 Which attenuation length: 0 #MOOREBAY (1)use Moore's Bay measured field attenuation length or (0)use South Pole measured data
 
+
 ################################################################################################
 # For testing
 ################################################################################################
@@ -147,6 +157,8 @@ Shower type: 1      # Type of shower for the previous option (1=em, 0=had)
 Loop over boresights: 1      # loop over boresights
 
 
+
+
 ################################################################################################
 # Interactions
 ################################################################################################
@@ -161,6 +173,8 @@ Constant y: 0      # whether to use constant y at 0.2 (1) yes or (0) no
 Max interaction distance: 800000.      # max distance the interaction can be from the balloon, so that it is within the horizon
 Set tau modes: 0	     # set taumodes (tau created in rock)
 
+
+
 ################################################################################################
 # General simulation settings
 ################################################################################################
@@ -171,6 +185,8 @@ Theta resolution: 0.5    # resolution on the polar angle of the signal, in degre
 Low frequency: 200.E6 # low frequency
 High frequency: 1200.E6 # high frequency
 
+
+
 ################################################################################################
 # Slac test - this hasn't been touched in a while so probably doesn't work
 ################################################################################################
@@ -180,17 +196,35 @@ SLAC ice slope: 5.8 # slope of the surface of the ice at slac, in degrees
 SLAC block length: 5.02 # length of the block of ice in meters
 SLAC interaction depth: 0.7966	# depth of interaction at slac beam test (meters)
 
+
+
 ################################################################################################
 # Coherent Sum Trigger settings
 ################################################################################################
 Coherent power threshold: 1300	# power threshold (arbitrary units) for coherent sum trigger and summed power trigger
 
+
+
 ################################################################################################
 # Settings for impulse responses
 ################################################################################################
 Digitizer path impulse response: 1 # apply impulse response to digitizer path (default for Anita-3 is 1, available also for Anita-2)
+Trigger path impulse response: 0 # apply impulse response to trigger path (default for Anita-3 is 1)
+
+
+
 
 ################################################################################################
 # Settings for time-dependent thresholds
 ################################################################################################
 Time dependent thresholds: 1 # use time-dependent thresholds (only available for Anita-3)
+
+
+
+
+################################################################################################
+# Settings for simulating thermal noise
+################################################################################################
+Digitizer noise from flight: 1       # generate thermal noise using flight data (only available for Anita-3) for digitizer path
+Trigger noise from flight: 0       # generate thermal noise using flight data (only available for Anita-3 and when using trigger path response) for trigger path
+Min bias: 0       # generate minimum bias sample (save events independently from the RF trigger)
