Left a note with the old input files, moved to archivedInputs subdir

--- a/inputs.anita1.conf
+++ b/inputs.anita1.conf
@@ -2,7 +2,7 @@
 #
 #                                    IceMC Settings.
 #
-# This is a pseudo-yaml format config file for the ANITA simulation program - IceMC
+# This is a config file for the ANITA simulation program - IceMC
 #
 ################################################################################################
 #
@@ -181,8 +181,8 @@ Max interaction distance: 800000.      # max distance the interaction can be fro
 Which Rays: 1      # which rays to look at for each neutrino (1) direct only or (2) direct and down-going or (3) down-going only
 CreateHorizons file: 1 # Select whether or not to write a new datafile for CreateHorizons.  Note: Creating the datafile takes a long time, and the files themselves are approx. 120, 120, and 170 MB, respectively.
 Theta resolution: 0.5    # resolution on the polar angle of the signal, in degrees
-Low frequency: 200.E6 # low frequency
-High frequency: 1200.E6 # high frequency
+Low frequency: 200e6 # low frequency
+High frequency: 1200e6 # high frequency
 
 
 
