--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -2,7 +2,7 @@
 #
 #                                    IceMC Settings.
 #
-# This is a pseudo-yaml format config file for the ANITA simulation program - IceMC
+# This is a config file for the ANITA simulation program - IceMC
 #
 ################################################################################################
 #
