--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -12,7 +12,7 @@
 # The contents of this file can be reorganised as you like.
 # Look inside Settings.cc to see examples of how to access the data in this file in your code.
 # All settings in this take the form...
-#     name : value
+#     name: value
 #
 # All characters, *including spaces*, before the colon are part of the variables name.
 # All whitespace behind the colon is ignored.
@@ -54,9 +54,9 @@ Antenna layers: 4 # How many physical layers of antennas to include.  If you ind
 Inclination top three layers: 10     # Inclination angle in degrees for top three antenna layers 10=default
 Inclination fourth layer: 10     # Inclination angle in degrees for fourth layer of antennas 10=default
 Flight path: 8 # (0) fixed balloon position (1) randomized at 80deg S (2) anita-lite flight. (3) banana plot (note: banana plot forces energy, turns off noise and turns off slopyness.  "How many neutrinos to generate" is not used, nor are any inputs relating to a detection system. Also, constant crust density, ice thickness, and elevation are set.) (4) for comparison with Peter (5) Pick your own altitude, phi and theta 2=default (6) Anita 1 flight (7) Anita 2 flight (8) Anita 3 flight
-Fixed balloon latitude: 999  # (degrees south) (999 is default position)
-Fixed balloon longitude: 999 # (degrees east) (999 is default position) longitude is between -180 and 180
-Balloon orientation : 0  # Fixed (0) or randomized (1) balloon orientation.  0=default
+Balloon latitude: 999  # (degrees south) (999 is default position)
+Balloon longitude: 999 # (degrees east) (999 is default position) longitude is between -180 and 180
+Balloon orientation: 0  # Fixed (0) or randomized (1) balloon orientation.  0=default
 Balloon altitude: 120000. # Pick balloon altitude in ft. (0) 120000 ft. or whatever you choose.
 Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
 
@@ -115,7 +115,7 @@ Zero signal: 0	# zero the signal to measure noise hits
 Random rotation polarization: 0	# randomize rotation of polarization around ray arrival direction at thepayload by a gaussian with width x degrees (0 = no randomisation)
 LPM effect: 1 # Turn on (1) and off (0) the LPM effect 1=default
 E-field factor: 1. # For systematics studies:  multiply Jaime's E-field by this factor.  1=default
-Thernal noise factor: 1. # For systematics studies:  multiply the thermal noise by this factor.  1=default
+Thermal noise factor: 1. # For systematics studies:  multiply the thermal noise by this factor.  1=default
 Disable polarization vectors: 0 # Disable use of polarization vectors.  (For debugging purposes.)
 Use pulser spectrum: 0 # (1) use pulser spectrum instead of signal spectrum or (0) use signal spectra as normal - this is more making signal efficiency curves only!
 Centre one phi-sector: 0 # (0) normal or (1) centre one phi sector of the payload on the incoming signal
@@ -179,7 +179,7 @@ Set tau modes: 0	     # set taumodes (tau created in rock)
 # General simulation settings
 ################################################################################################
 
-Which Rays: 1      # which rays to look at for each neutrino (1) direct only or (2) direct and down-going or (3) down-going only
+Which rays: 1      # which rays to look at for each neutrino (1) direct only or (2) direct and down-going or (3) down-going only
 CreateHorizons file: 1 # Select whether or not to write a new datafile for CreateHorizons.  Note: Creating the datafile takes a long time, and the files themselves are approx. 120, 120, and 170 MB, respectively.
 Theta resolution: 0.5    # resolution on the polar angle of the signal, in degrees
 Low frequency: 200.E6 # low frequency
