Update input file with added option

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -235,5 +235,6 @@ Min bias: 0       # generate minimum bias sample (save events independently from
 # Settings for trigger efficiency scan
 ################################################################################################
 Efficiency scan: 0 # Do a trigger efficiency scan (need to turn on skip cuts and min bias flag as well)
+Apply pulse at surf: 0 # Apply pulse at AMPA (0) or at SURF (1)
 Central phi-sector: 15       # Central phi sector [numbers are 1-16]
 Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sectors and the two adjecent ones (when -1 no signal in those antennas)
