Change payload 10 from SWORD satellite to ANITA-IV

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -49,7 +49,7 @@ Events map: 0 # (1) EVENTSMAP draw the events distribution map or (0) not
 ################################################################################################
 # Balloon and payload
 ################################################################################################
-Which payload: 9 # Which payload:  ANITA-lite (0), Ross Payload (1), 2006-2007 flight with simple settings, Make Your Own (3), Ant Hill (4), 2006-2007 flight with Kurt measurements(6), EeVEX (one layer of antennas) (7), ANITA-II (8), ANITA-III (9), (SWORD) Satellite (10)
+Which payload: 9 # Which payload:  ANITA-lite (0), Ross Payload (1), 2006-2007 flight with simple settings, Make Your Own (3), Ant Hill (4), 2006-2007 flight with Kurt measurements(6), EeVEX (one layer of antennas) (7), ANITA-II (8), ANITA-III (9), ANITA-IV (10)
 Antenna layers: 4 # How many physical layers of antennas to include.  If you indicate N, it will consider the top N layers and ignore the rest.  Useful for turning off the nadirs.  4=default
 Inclination top three layers: 10     # Inclination angle in degrees for top three antenna layers 10=default
 Inclination fourth layer: 10     # Inclination angle in degrees for fourth layer of antennas 10=default
