I think this might be the right way to do it... it's really hard to check what definitions were added by cmake. If someone has gcc < 4.5 and this breaks, let me know

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,24 +18,28 @@ include(${ROOT_USE_FILE})
 include_directories(${PROJECT_SOURCE_DIR})
 
 message("cmake_cxx_flags = ${CMAKE_CXX_FLAGS}")
+
 string(FIND ${CMAKE_CXX_FLAGS} "-std=" NEED_SET_CPP_FLAGS)
 if(${NEED_SET_CPP_FLAGS} EQUAL -1)
   if(CMAKE_COMPILER_IS_GNUCC)
     message(${CMAKE_CXX_COMPILER_VERSION})
     if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.5.0 OR CMAKE_CXX_COMPILER_VERSION VERSION_EQUAL 4.5.0)
+      message(" -std=c++11 ") 
       add_definitions(-std=c++11)
     else()
-      add_definitions(-std=c++0x)
+      ##DRAGONS BE HERE
+      add_definitions(-Dconstexpr=const)
     endif()
   endif()
 endif()
 
 
-string(FIND ${CMAKE_CXX_FLAGS} "-std=c++1" USE_MODERN_CPP)
-if(${USE_MODERN_CPP} EQUAL -1)
-  ##DRAGONS BE HERE
-  add_definitions(-Dconstexpr=const)
-endif()
+#string(FIND ${CMAKE_CXX_FLAGS} "-std=c++1" USE_MODERN_CPP)
+#if(${USE_MODERN_CPP} EQUAL -1)
+#  ##DRAGONS BE HERE
+#  add_definitions(-Dconstexpr=const)
+#endif()
+
 
 
 
