--- a/inputs.anita4.conf
+++ b/inputs.anita4.conf
@@ -80,7 +80,7 @@ Num L1 hits to pass L2: 2  # number of L1 hits in a 'clump' to pass L2 trigger
 Num antenna for L2 trigger: 3 # number of antenna in 'clump' for L2 trigger
 Require centre antenna: 1 # require centre antenna in clump is one of those hit
 L3 trigger requirement: 1 # (1) for L3 trigger or (0) no L3 trigger requirement
-LCP/RCP or V/H: 0	# 1 for LCP and RCP, 0 for V and H
+LCP/RCP or V/H: 1	# 1 for LCP and RCP, 0 for V and H
 Channels required polarization: 1, 1 # any channels passing are REQUIRED to be from this polarization
 Channels allowed polarization: 1, 1 # any channels passing are ALLOWED to be from this polarization
 Exta antennas in trigger: 0 # 2=use nadirs, 1= use discones or 0= do not use discones or nadirs in the trigger
@@ -115,7 +115,7 @@ Zero signal: 0	# zero the signal to measure noise hits
 Random rotation polarization: 0	# randomize rotation of polarization around ray arrival direction at thepayload by a gaussian with width x degrees (0 = no randomisation)
 LPM effect: 1 # Turn on (1) and off (0) the LPM effect 1=default
 E-field factor: 1. # For systematics studies:  multiply Jaime's E-field by this factor.  1=default
-Thermal noise factor: 1. # For systematics studies:  multiply the thermal noise by this factor.  1=default
+Thermal noise factor: 0.8 # For systematics studies:  multiply the thermal noise by this factor.  1=default
 Disable polarization vectors: 0 # Disable use of polarization vectors.  (For debugging purposes.)
 Use pulser spectrum: 0 # (1) use pulser spectrum instead of signal spectrum or (0) use signal spectra as normal - this is more making signal efficiency curves only!
 Centre one phi-sector: 0 # (0) normal or (1) centre one phi sector of the payload on the incoming signal
