Default ANITA-4 inputs now use Butterworth filters as approximation of TUFFs. Notch 0 and 1 on for the whole flight. Notch 2 off.

--- a/inputs.anita2.conf
+++ b/inputs.anita2.conf
@@ -196,3 +196,10 @@ SLAC horizontal distance: 13.	# horizontal distance from interaction to center o
 SLAC ice slope: 5.8 # slope of the surface of the ice at slac, in degrees
 SLAC block length: 5.02 # length of the block of ice in meters
 SLAC interaction depth: 0.7966	# depth of interaction at slac beam test (meters)
+
+
+################################################################################################
+# Settings for TUFFs
+################################################################################################
+Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
+Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
