--- a/inputs.anita4.conf
+++ b/inputs.anita4.conf
@@ -236,6 +236,11 @@ Digitizer noise from flight: 1       # generate thermal noise using flight data 
 Trigger noise from flight: 0       # generate thermal noise using flight data (only available for Anita-3 and when using trigger path response) for trigger path
 Min bias: 0       # generate minimum bias sample (save events independently from the RF trigger)
 
+################################################################################################
+# Settings for TUFFs
+################################################################################################
+Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
+Which TUFFs are on: 1, 1, 0    # which TUFF filters are on for the whole flight
 
 
 ################################################################################################
