--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -245,3 +245,10 @@ Efficiency scan: 0 # Do a trigger efficiency scan (need to turn on skip cuts and
 Apply pulse at surf: 0 # Apply pulse at AMPA (0) or at SURF (1)
 Central phi-sector: 15       # Central phi sector [numbers are 1-16]
 Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sectors and the two adjecent ones (when -1 no signal in those antennas)
+
+
+################################################################################################
+# Settings for TUFFs
+################################################################################################
+Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
+Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
