Added a bunch of stuff to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
+
 *.o
 *.pcm
+*bak
+*dSYM
 classdict*
 icemc
+testEAS
+testInputAfterAntenna
+testSettings
+testThermalNoise
+testTrigger
 limits/*.pdf
 limits/*.eps
 limits/makelimitplot
+gitversion.c
+setup.sh
+doc/html
+doc/latex
+output*
