Added input options to the anita2 default config files. These are standard input options that are off for anita2 but it's better to define them so that icemc doesn't get confused

--- a/inputs.anita2.conf
+++ b/inputs.anita2.conf
@@ -198,6 +198,47 @@ SLAC block length: 5.02 # length of the block of ice in meters
 SLAC interaction depth: 0.7966	# depth of interaction at slac beam test (meters)
 
 
+
+################################################################################################
+# Coherent Sum Trigger settings
+################################################################################################
+Coherent power threshold: 1300	# power threshold (arbitrary units) for coherent sum trigger and summed power trigger
+
+
+
+################################################################################################
+# Settings for impulse responses
+################################################################################################
+Digitizer path impulse response: 0 # apply impulse response to digitizer path (default for Anita-3 is 1, available also for Anita-2)
+Trigger path impulse response: 0 # apply impulse response to trigger path (default for Anita-3 is 1)
+
+
+################################################################################################
+# Settings for time-dependent thresholds
+################################################################################################
+Time dependent thresholds: 0 # use time-dependent thresholds (only available for Anita-3)
+Dead time: 0 # read dead-time from flight (only available for Anita-3)
+
+
+
+################################################################################################
+# Settings for simulating thermal noise
+################################################################################################
+Digitizer noise from flight: 0       # generate thermal noise using flight data (only available for Anita-3) for digitizer path
+Trigger noise from flight: 0       # generate thermal noise using flight data (only available for Anita-3 and when using trigger path response) for trigger path
+Min bias: 0       # generate minimum bias sample (save events independently from the RF trigger)
+
+
+
+################################################################################################
+# Settings for trigger efficiency scan
+################################################################################################
+Efficiency scan: 0 # Do a trigger efficiency scan (need to turn on skip cuts and min bias flag as well)
+Apply pulse at surf: 0 # Apply pulse at AMPA (0) or at SURF (1)
+Central phi-sector: 15       # Central phi sector [numbers are 1-16]
+Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sectors and the two adjecent ones (when -1 no signal in those antennas)
+
+
 ################################################################################################
 # Settings for TUFFs
 ################################################################################################
