--- a/inputs.anita2.conf
+++ b/inputs.anita2.conf
@@ -136,7 +136,13 @@ Fixed ice elevation: 0 # Fixed ice elevation
 Medium: 0 # ice (0) or salt(1)
 Enable surface roughness: 0 # Include effects of surface roughness (1) or not (0)  For this, should also have the option "Skip making cuts on neutrinos we couldn't see anyway" set to 1
 Surface roughness: 1      # level of surface roughness: flatglass (0), 500 grit (1), 1000 grit (2), 1500 grit (3)
-Screen edge length [meters]: 25000
+Screen edge length [meters]: 2000 # 2000
+Interaction position shift [meters]: 300000 # 300000
+Base screen divisions: 20 # 50?
+Subgrid divisions: 4 # 4?
+Base screen fraction threshold: 0.2 # 0.2?
+Subgrid fraction threshold: 0.01 # 0.01?
+Number of subgrid generations: 4 # 4?
 FIRN: 1	# FIRN (1) yes or (0) no
 Which attenuation length: 0 #MOOREBAY (1)use Moore's Bay measured field attenuation length or (0)use South Pole measured data
 
