Added very simple CW to check if tuffs on/off toggle works fine

--- a/inputs.anita4.conf
+++ b/inputs.anita4.conf
@@ -241,7 +241,7 @@ Min bias: 0       # generate minimum bias sample (save events independently from
 ################################################################################################
 Simulate TUFFs: 1              # simulate the TUFF notches for the whole flight
 Which TUFFs are on: 1, 1, 0    # which TUFF filters are on for the whole flight
-
+Add CW: 1                      # add CW
 
 ################################################################################################
 # Settings for trigger efficiency scan
