Added skeleton program for WAIS pulses

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,5 +113,6 @@ add_binary(icemc)
 add_binary(testTrigger) 
 add_binary(testSettings) 
 add_binary(testEAS) 
+add_binary(testWAIS) 
 add_binary(testThermalNoise)
 add_binary(testInputAfterAntenna)
