--- a/inputs.anita3_trigEffScan.conf
+++ b/inputs.anita3_trigEffScan.conf
@@ -247,7 +247,11 @@ Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
 ################################################################################################
 # Settings for trigger efficiency scan
 ################################################################################################
-Efficiency scan: 1 # Do a trigger efficiency scan (need to turn on skip cuts and min bias flag as well)
-Apply pulse at surf: 0 # Apply pulse at AMPA (0) or at SURF (1)
-Central phi-sector: 15       # Central phi sector [numbers are 1-16]
-Off-axis attenuation: 0, 0, -51, -51, 0 # Attenuation applied to central phi sectors and the two adjecent ones (when 999 no signal in those antennas)
+Efficiency scan: 1                       # Do a trigger efficiency scan (need to turn on skip cuts and min bias flag as well)
+Apply pulse at surf: 0                   # Apply pulse at AMPA (0) or at SURF (1)
+Central phi-sector: 15                   # Central phi sector [numbers are 1-16]
+Off-axis attenuation: 0, 0, -51, -51, 0  # Attenuation applied to central phi sectors and the two adjecent ones (when 999 no signal in those antennas)
+Phi-sectors delays: 0, 0, 0, 0, 0        # Additional delays added to each phi sectors
+Rings used: 1, 1, 1                      # Which rings are used in this scan (T, M, B)
+Ring delays to phi: 0, 0, 0, 0, 0        # Apply ring delays to which phi sectors 
+Ring delays: 0, 0, 0                     # Additional delays between T-M, M-B, T-B
