baseline working roughness check-in

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -137,13 +137,13 @@ Fixed ice elevation: 0 # Fixed ice elevation
 Medium: 0 # ice (0) or salt(1)
 Enable surface roughness: 0 # Include effects of surface roughness (1) or not (0)  For this, should also have the option "Skip making cuts on neutrinos we couldn't see anyway" set to 1
 Surface roughness: 1      # unused
-Screen edge length [meters]: 10000 # 
-Interaction position shift [meters]: 30000 # ?
+Screen edge length [meters]: 1000 # 
+Interaction position shift [meters]: 10000 #
 Base screen divisions: 100 # 
-Subgrid divisions: 10 # ?
-Base screen fraction threshold: 0. # 0.01
-Subgrid fraction threshold: 0. # ?
-Number of subgrid generations: 4 # ?
+Subgrid divisions: 5 # ?
+Base screen fraction threshold: 0. #
+Subgrid fraction threshold: 0. #
+Number of subgrid generations: 4 #
 FIRN: 1 # FIRN (1) yes or (0) no
 Which attenuation length: 0 #MOOREBAY (1)use Moore's Bay measured field attenuation length or (0)use South Pole measured data
 
