removed screen-weighting of waveforms, applied Taper to screen points, set some default roughness input values

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -33,7 +33,7 @@
 ################################################################################################
 # Event input output
 ################################################################################################
-Number of neutrinos: 2000000   # How many neutrinos to generate
+Number of neutrinos: 250   # How many neutrinos to generate
 Energy exponent: 20            # Select energy (just enter the exponent) or (30) for baseline ES&S (1) for E^-1 (2) for E^-2 (3) for E^-3 (4) for E^-4 (5) for ES&S flux with cosmological constant (6) for neutrino GZK flux from Iron nucleii (16-22)not using spectrum but just for a single energy (101-114)use all kinds of theoretical flux models
 Energy CDF or dartboard: 0     # If using an energy spectrum, select whether to draw from a CDF or from a dartboard model
 Neutrino position: 0           # (0) Pick neutrino position in the ice within the horizon of the balloon and neutrino direction such that the specular ray hitting the balloon sits on the Cerenkov cone or (1) Pick neutrino interaction point from anywhere in the ice and neutrino direction from all directions equally
@@ -139,7 +139,7 @@ Enable surface roughness: 0 # Include effects of surface roughness (1) or not (0
 Surface roughness: 1      # unused
 Screen edge length [meters]: 1000 # 
 Interaction position shift [meters]: 100000 #
-Base screen divisions: 100 # 
+Base screen divisions: 200 # 
 Subgrid divisions: 5 # ?
 Base screen fraction threshold: 0. #
 Subgrid fraction threshold: 0. #
