user can specify roughness scale now, since tables were added

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -136,7 +136,7 @@ Flat surface: 0 # Set the normal to the surface to always be straight up. (1)  S
 Fixed ice elevation: 0 # Fixed ice elevation
 Medium: 0 # ice (0) or salt(1)
 Enable surface roughness: 0 # Include effects of surface roughness (1) or not (0)  For this, should also have the option "Skip making cuts on neutrinos we couldn't see anyway" set to 1
-Surface roughness: 1      # unused
+Surface roughness: 0p10      # set roughness scale s_rms, default (0.10 -> 0p10) need to replace (.) with (p)
 Screen edge length [meters]: 1000 # 
 Interaction position shift [meters]: 100000 #
 Base screen divisions: 200 # 
