--- a/inputs.anita4.conf
+++ b/inputs.anita4.conf
@@ -60,7 +60,8 @@ Balloon longitude: 999 # (degrees east) (999 is default position) longitude is b
 Balloon orientation: 0  # Fixed (0) or randomized (1) balloon orientation.  0=default
 Balloon altitude: 120000. # Pick balloon altitude in ft. (0) 120000 ft. or whatever you choose.
 Gain setting: 1 # Constant gains (0) or Ped's measured gains (1)
-
+Specific Payload Unix Time: 0 # Set to a non-zero unix time during flight to generate events only near that position 
+Specific Payload Delta Time: 3600 # If a specific payload time is used, the delta around that 
 
 
 ################################################################################################
