added Add CW to A3 input and updated roughness parameters for A4 input

--- a/inputs.anita3.conf
+++ b/inputs.anita3.conf
@@ -253,3 +253,4 @@ Off-axis attenuation: 0, 0, -35, -35, 0 # Attenuation applied to central phi sec
 ################################################################################################
 Simulate TUFFs: 0              # simulate the TUFF notches for the whole flight
 Which TUFFs are on: 0, 0, 0    # which TUFF filters are on for the whole flight
+Add CW: 0                      # add CW
